--- a/blogpost.html
+++ b/blogpost.html
@@ -4,8 +4,11 @@
         <link rel="stylesheet" href ="css/estilos.css" />
     </head>
     <body>
-        <h1>Aqui vamos a hacer un blog post
-        <p>Y este es el parrafo de inicio</p>
-        </h1>
+        <div id="container">
+            <div id="post">
+        <h1>Este es el titulo atractivo he interesante del post</h1>
+        <p>Esta es la parte donde vamos a mostrar las cosas interesantes que se pueden hacer con ramas</p>
+            </div>
+        </div>            
     </body>
 </html>
