--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
             <div id="post">
         <h1>Este es el titulo atractivo he interesante del post</h1>
         <p>Esta es la parte donde vamos a mostrar las cosas interesantes que se pueden hacer con ramas</p>
-        <p>la verdad esto esta dificil, pero si por alguna casual lo logro sere el putas</p>
+        <p>la verdad esto esta dificil, pero si por alguna casual lo logro sere el cabecera</p>
             </div>
         </div>            
     </body>
