Cambios en hyperblog
porque puedo

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
-<html>
+ido<html>
     <head>
-        <title>El ultimo del post</title>
+        <title>Bienvenido a hyperblog</title>
         <link rel="stylesheet" href ="css/estilos.css" />
     </head>
     <body>
